feat(email): implement reusable email fragments for header, footer, button, notice, and code box